[gd_scene load_steps=4 format=3 uid="uid://dyhjhcnuwuddr"]

[ext_resource type="Script" path="res://scripts/state_machine/state_machine_demo.gd" id="1_dw03f"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="1_eme0s"]
[ext_resource type="Script" path="res://scripts/state_machine/state.gd" id="2_t4ynt"]

[node name="Player" type="Node2D"]
script = ExtResource("1_dw03f")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_eme0s")
initial_state = NodePath("Moving")

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource("2_t4ynt")

[node name="Attacking" type="Node" parent="StateMachine"]
script = ExtResource("2_t4ynt")

[connection signal="entered" from="StateMachine/Moving" to="." method="_on_state_entered"]
[connection signal="exited" from="StateMachine/Moving" to="." method="_on_state_exited"]
[connection signal="entered" from="StateMachine/Attacking" to="." method="_on_state_entered"]
[connection signal="exited" from="StateMachine/Attacking" to="." method="_on_state_exited"]
